--- a/kayttoliittymaohjelmointi/Labra_10_tehtava_3/MainWindow.xaml
+++ b/kayttoliittymaohjelmointi/Labra_10_tehtava_3/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Labra_10_tehtava_3"
         mc:Ignorable="d"
-        Title="Rami Ojala | Labra 10 - Tehtava 3" Height="317" Width="394.5" SizeToContent="WidthAndHeight" ResizeMode="NoResize" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen">
+        Title="Rami Ojala | Labra 10 - Tehtava 3" Height="454" Width="416.5" SizeToContent="WidthAndHeight" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen">
 
     <Grid>
         <Label x:Name="lblChooseGame" Content="Choose a game: " HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
@@ -15,8 +15,9 @@
         <Button x:Name="btnCreate" Content="Create" HorizontalAlignment="Left" Margin="54,72,0,0" VerticalAlignment="Top" Width="45" Click="btnCreate_Click"/>
         <Button x:Name="btnClear" Content="Clear" HorizontalAlignment="Left" Margin="113,72,0,0" VerticalAlignment="Top" Width="45" Click="btnClear_Click"/>
         <Label x:Name="lblGeneratedRows" Content="Rows: " HorizontalAlignment="Left" Margin="10,83,0,0" VerticalAlignment="Top"/>
-        <TextBlock x:Name="txbRows" Margin="10,109,10,10" TextWrapping="Wrap" Height="250" VerticalAlignment="Top" Background="#FFFFF6D7" ScrollViewer.HorizontalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="True" ScrollViewer.VerticalScrollBarVisibility="Auto"/>
-
+        <ScrollViewer Margin="0,110,0,0">
+            <TextBlock x:Name="txbRows" Background="#FFFFF6D7" ScrollViewer.CanContentScroll="True" ScrollViewer.VerticalScrollBarVisibility="Visible"/>
+        </ScrollViewer>
     </Grid>
 
 
