--- a/kayttoliittymaohjelmointi/WPFDataBindingDemo2/MainWindow.xaml
+++ b/kayttoliittymaohjelmointi/WPFDataBindingDemo2/MainWindow.xaml
@@ -56,6 +56,18 @@
             <TextBox x:Name="txtCity" Text="{Binding Path=City}" />
             <Button x:Name="btnBackward" Content="Edellinnen" Click="btnBackward_Click" />
             <Button x:Name="btnForward" Content="Seuraava" Click="btnForward_Click" />
+            <Separator Margin="0,10,0,0" Background="Blue" BorderThickness="0" />
+            <Label Content="Uuden joukkueen lisäys" />
+            <StackPanel Orientation="Horizontal">
+                <Label Content="- Nimi" />
+                <TextBox x:Name="txtJoukkueNimi" Width="100" />
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <Label Content="- Kaupunki" />
+                <TextBox x:Name="txtJoukkueKaupunki" Width="100"/>
+            </StackPanel>
+            <Button x:Name="btnAdd" Content="Lisää joukkue liigaan" Click="btnAdd_Click" />
+
         </StackPanel>
         
     </Grid>
